Implented onClick listener on Reset button which calls resetList() function which shows an alert diaglog and does respective operation

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">Expense Manager</string>
+    <string name="confirm_reset">Confirm Reset</string>
+    <string name="confirm_message">Are you sure you want to remove all the added expenses?</string>
 </resources>
