Added expense_add layout, which will be used in the add button alert dialog

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,6 @@
     <string name="app_name">Expense Manager</string>
     <string name="confirm_reset">Confirm Reset</string>
     <string name="confirm_message">Are you sure you want to remove all the added expenses?</string>
+    <string name="item">Item</string>
+    <string name="price">Price</string>
 </resources>
